welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:19: error: identifier expected but integer literal found.
    T[i-1]=getCouleurSol()
        ^Array1:20: error: ']' expected but '}' found.
  }
  ^Array1:33: error: identifier expected but integer literal found.
    setCouleurBrosse(T[i-1])
                         ^Array1:36: error: ']' expected but '}' found.
  }
  ^